src/scss/main.scss
$toolbar-height: 72px;
$page-nav-height: 120px;

@mixin layout-fit {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

@mixin layout-center($direction) {
  display: flex;
  flex-direction: $direction;
  justify-content: center;
  align-items: center;
  align-content: center;
}

@mixin space-between($direction, $space) {
  @if $direction == 'row' {
    > {
      * {
        margin: 0 ($space / 2);
      }
      :first-child {
        margin-left: 0;
      }
      :last-child {
        margin-right: 0;
      }
    }
  }
  @else {
    > {
      * {
        margin: ($space / 2) 0;
      }
      :first-child {
        margin-top: 0;
      }
      :last-child {
        margin-bottom: 0;
      }
    }
  }
}

@keyframes logoIn {
  from {
    opacity: 0;
    transform: scale(0.7) rotate(-40deg);
  }
  to {
    opacity: 1;
    transform: scale(1.0) rotate(0deg);
  }
}

.logoIn {
  animation-name: logoIn;
}

::selection {
  background: black;
  color: white;
}

::-moz-selection {
  background: black;
  color: white;
}

body {
  margin: 0;
  font-family: "Roboto", sans-serif;
  -webkit-tap-highlight-color: transparent;
  font-size: 22px;
  font-weight: 300;
}

h1, h2, h3, h4 {
  font-weight: 300;
  line-height: 1.3em;
}

h1 {
  font-size: 220%;
}

h2 {
  font-size: 180%;
}

b, strong {
  font-weight: normal;
}

a {
  color: #009688;
  text-decoration: none;
}

#toolbar {
  $toolbar-padding: 16px;
  animation-delay: 2s;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  z-index: 1;
  width: 100%;
  height: $toolbar-height;
  background: white;
  font-size: 20px;
  transition: box-shadow 0.5s;
  box-shadow:
    0 2px 2px 0 rgba(0, 0, 0, 0.14),
    0 1px 5px 0 rgba(0, 0, 0, 0.12),
    0 3px 1px -2px rgba(0, 0, 0, 0.2);

  &, * {
    transition: 0.5s;
  }
  .dynamic {
    transition-delay: 0.5s;
    transform: none;
  }

  @mixin toolbar-button {
    align-self: stretch;
    color: rgba(0, 0, 0, 0.7);
    padding: 0 $toolbar-padding;
    line-height: $toolbar-height;
    font-weight: normal;
    overflow: hidden;
    position: relative;

    &:after {
      @include layout-fit;
      content: "";
      pointer-events: none;
      transition: background 0.3s 0s;
    }
    &:hover:after {
      background: rgba(0, 0, 0, 0.1);
    }
  }

  .logo {
    @include toolbar-button;
    $toolbar-logo-size: 48px;
    display: flex;
    align-items: center;

    img {
      margin-right: $toolbar-padding;
      width: $toolbar-logo-size;
      height: $toolbar-logo-size;
      transform: none;
    }
  }

  ul {
    @include layout-fit;
    @include layout-center(row);
    list-style: none;
    margin: 0;
    padding: 0;
    z-index: -1;

    li {
      display: flex;
      align-items: center;
      a {
        @include toolbar-button;
      }
    }
  }

  .quick-link {
    margin-right: $toolbar-padding;
  }
}
.top {
  #toolbar {
    box-shadow: none;
    background: #f7f7f7;

    &, * {
      transition-delay: 0s;
    }
    .dynamic {
      transition-delay: 0s;
      transform: translateY(-$toolbar-height);
    }

    .logo img {
      transform: rotate(120deg) scale(0.7);
    }

    ul li a {
      transform: translateY(8px);
      margin: 0 4px;
      border-radius: 4px;
    }
  }
}

.page {
  @include layout-center(column);
  @include space-between(column, 32px);
  height: 100vh;
  width: 100%;
  position: relative;
  float: left;
  color: white;
  padding: $toolbar-height 32px $page-nav-height 32px;
  box-sizing: border-box;
  text-align: center;
  overflow: hidden;

  p {
    margin: 8px 0;
  }

  .nav {
    position: absolute;
    left: 0;
    right: 0;
    height: $page-nav-height;
    transition: background 0.5s;

    &:hover {
      background: rgba(255, 255, 255, 0.1);
    }

    .icon {
      position: absolute;
      left: 0;
      right: 0;
      margin-left: auto;
      margin-right: auto;
      display: block;
      width: 56px;
      height: 56px;
      border: 6px solid white;
      border-top: none;
      border-left: none;
      opacity: 0.3;
      transition: transform 0.5s;
    }

    &.prev {
      top: 0;

      &:hover {
        .icon {
          transform: translateY(45px) rotate(-135deg);
        }
      }

      .icon {
        transform: translateY(60px) rotate(-135deg);
      }
    }

    &.next {
      bottom: 0;

      &:hover {
        .icon {
          transform: translateY(15px) rotate(45deg);
        }
      }

      .icon {
        transform: translateY(0px) rotate(45deg);
      }
    }
  }
}

.page-light {
  @extend .page;
  color: rgba(0, 0, 0, 0.7);

  .nav {
    &:hover {
      background: rgba(0, 0, 0, 0.1);
    }

    .icon {
      border-color: black;
    }
  }
}

#homepage {
  @extend .page-light;
  background: #f7f7f7;

  img {
    width: 280px;
    transition: transform 0.5s;

    &:hover {
      transform: scale(1.05) rotate(10deg);
    }
  }

  h1 {
    line-height: 0.5em;

    b {
      font-size: 50%;
      text-transform: uppercase;
      color: rgba(0, 0, 0, 0.34);
      font-weight: 300;
    }
  }
}

#features {
  $line-height: 28px;
  background: #009688;

  > div {
    @include layout-center(row);
    @include space-between(row, 32px);
  }

  img {
    flex: 1;
    max-width: 500px;
    height: auto;
    border: 8px solid white;
    box-sizing: border-box;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
    0 1px 5px 0 rgba(0, 0, 0, 0.12),
    0 3px 1px -2px rgba(0, 0, 0, 0.2);
  }

  ul {
    flex: 1;
    $bullet-width: 22px;
    $bullet-height: 20px;
    $bullet-spacing: 12px;
    text-align: left;
    line-height: $line-height;
    list-style: none;
    padding: 0;

    li {
      box-sizing: border-box;
      margin: 8px 0;
      padding-left: $bullet-width + $bullet-spacing;

      &:before {
        float: left;
        content: "";
        width: $bullet-width;
        height: $bullet-height;
        margin-top: ($line-height - $bullet-height) / 2 - 1;
        margin-right: $bullet-spacing;
        margin-left: -($bullet-width + $bullet-spacing);
        background: url("images/icons/logo.svg") no-repeat left center;
        background-size: 100% 100%;
        transition: transform 0.2s;
      }

      &:hover:before {
        transform: scale(1.2) rotate(60deg);
      }
    }
  }
}

#page3 {
  background: #8bc34a;
}

